--- a/projects/crossplane.yaml
+++ b/projects/crossplane.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   description: "Project for Crossplane installation and management on AKS"
   sourceRepos:
-    - 'https://github.com/arsenaid/argo-autopilot.git/apps/crossplane/argo-cd'  # Restrict sources to the relevant Git repository
+    - 'https://github.com/arsenaid/argo-autopilot.git'  # Restrict sources to the relevant Git repository
   destinations:
     - namespace: crossplane-system
       server: 'https://kubernetes.default.svc'  # Only allow deploying within the current AKS cluster
