--- a/projects/testing.yaml
+++ b/projects/testing.yaml
@@ -97,6 +97,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: crossplane-system
+    createNamespace: true
   syncPolicy:
     automated:
       prune: true
