--- a/crossplane/upbound/provider-azure/provider/provider-azure.yaml
+++ b/crossplane/upbound/provider-azure/provider/provider-azure.yaml
@@ -1,10 +1,9 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: provider-azure
-  namespace: crossplane-system
+  name: provider-azure-network
 spec:
-  package: crossplane/provider-azure:v0.17.0
+  package: xpkg.upbound.io/upbound/provider-azure-network:v1.8.0
   packagePullPolicy: IfNotPresent # Only download the package if it isn’t in the cache.
   revisionActivationPolicy: Automatic # Otherwise our Provider never gets activate & healthy
   revisionHistoryLimit: 1
