--- a/crossplane/upbound/provider-azure/provider/provider-azure-sql.yaml
+++ b/crossplane/upbound/provider-azure/provider/provider-azure-sql.yaml
@@ -1,9 +1,9 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: provider-azure-network
+  name: provider-azure-sql
 spec:
-  package: xpkg.upbound.io/upbound/provider-azure-network:v1.8.0
+  package: xpkg.upbound.io/upbound/provider-azure-sql:v1.8.0
   packagePullPolicy: IfNotPresent # Only download the package if it isn’t in the cache.
   revisionActivationPolicy: Automatic # Otherwise our Provider never gets activate & healthy
   revisionHistoryLimit: 1
