--- a/crossplane/upbound/provider-azure/provider/provider-azure.yaml
+++ b/crossplane/upbound/provider-azure/provider/provider-azure.yaml
@@ -1,6 +1,6 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: provider-azure
+  name: provider-azure-management
 spec:
-  package: crossplane/provider-azure:v0.20.0
+  package: xpkg.upbound.io/upbound/provider-azure-management:1.10.2
