--- a/infrastructure/resource-group.yaml
+++ b/infrastructure/resource-group.yaml
@@ -1,7 +1,7 @@
 apiVersion: azure.upbound.io/v1beta1
 kind: ResourceGroup
 metadata:
-  name: eexample-rg
+  name: example-rg
 spec:
   forProvider:
     location: East US
