--- a/infrastructure/azure-sql.yaml
+++ b/infrastructure/azure-sql.yaml
@@ -13,6 +13,15 @@ spec:
     resourceGroupName: example-rg
     version: "12.0"
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: sql-password
+  namespace: crossplane-system
+type: Opaque
+data:
+  password: <base64-encoded-password>
+---
 apiVersion: sql.azure.upbound.io/v1beta1
 kind: MSSQLDatabase
 metadata:
