server name fix

--- a/infrastructure/azure-sql.yaml
+++ b/infrastructure/azure-sql.yaml
@@ -32,6 +32,5 @@ spec:
     maxSizeGb: 10
     sku:
       name: S0
-    serverIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: arsen-sqlserver-2025
+    serverIdRef:
+      name: arsen-sqlserver-2025
