--- a/infrastructure/azure-sql.yaml
+++ b/infrastructure/azure-sql.yaml
@@ -1,38 +1,38 @@
-apiVersion: sql.azure.upbound.io/v1beta1
-kind: MSSQLServer
-metadata:
-  name: arsen-sqlserver-2025
-  labels:
-    testing.upbound.io/example-name: arsen-test-srv
-spec:
-  forProvider:
-    administratorLogin: 4dm1n157r470r
-    administratorLoginPasswordSecretRef:
-      name: sql-password
-      key: password
-      namespace: crossplane-system
-    location: East US
-    resourceGroupName: example-rg
-    version: "12.0"
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: sql-password
-  namespace: crossplane-system
-type: Opaque
-data:
-  password: RamenN00dles
----
-apiVersion: sql.azure.upbound.io/v1beta1
-kind: MSSQLDatabase
-metadata:
-  name: example-sqldatabase
-spec:
-  forProvider:
-    maxSizeGb: 10
-    sku:
-      name: S0
-    serverIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: arsen-test-srv
+# apiVersion: sql.azure.upbound.io/v1beta1
+# kind: MSSQLServer
+# metadata:
+#   name: arsen-sqlserver-2025
+#   labels:
+#     testing.upbound.io/example-name: arsen-test-srv
+# spec:
+#   forProvider:
+#     administratorLogin: 4dm1n157r470r
+#     administratorLoginPasswordSecretRef:
+#       name: sql-password
+#       key: password
+#       namespace: crossplane-system
+#     location: East US
+#     resourceGroupName: example-rg
+#     version: "12.0"
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: sql-password
+#   namespace: crossplane-system
+# type: Opaque
+# data:
+#   password: RamenN00dles
+# ---
+# apiVersion: sql.azure.upbound.io/v1beta1
+# kind: MSSQLDatabase
+# metadata:
+#   name: example-sqldatabase
+# spec:
+#   forProvider:
+#     maxSizeGb: 10
+#     sku:
+#       name: S0
+#     serverIdSelector:
+#       matchLabels:
+#         testing.upbound.io/example-name: arsen-test-srv
