--- a/infrastructure/azure-sql-xrd.yaml
+++ b/infrastructure/azure-sql-xrd.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: compositeazuresqldbs.database.example.org
+  name: xsql.database.example.org
 spec:
   group: database.example.org
   names:
-    kind: CompositeAzureSQLDatabase
-    plural: compositeazuresqldbs
+    kind: xsql
+    plural: xsqls
   claimNames:
-    kind: AzureSQLDatabase
-    plural: azuresqldatabases
+    kind: azuresql
+    plural: azuresqls
   versions:
     - name: v1alpha1
       served: true
