--- a/infrastructure/azure-sql-xrd.yaml
+++ b/infrastructure/azure-sql-xrd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xsql.database.example.org
+  name: xsql-database
 spec:
   group: database.example.org
   names:
