--- a/infrastructure/azure-sql-xrd.yaml
+++ b/infrastructure/azure-sql-xrd.yaml
@@ -1,32 +1,32 @@
-# apiVersion: apiextensions.crossplane.io/v1
-# kind: CompositeResourceDefinition
-# metadata:
-#   #'<plural>.<group>'
-#   name: xsqls.database.example.org
-# spec:
-#   group: database.example.org
-#   names:
-#     kind: Xsql
-#     plural: xsqls
-#   claimNames:
-#     kind: Azuresql
-#     plural: azuresqls
-#   versions:
-#     - name: v1alpha1
-#       served: true
-#       referenceable: true
-#       schema:
-#         openAPIV3Schema:
-#           type: object
-#           properties:
-#             spec:
-#               type: object
-#               properties:
-#                 parameters:
-#                   type: object
-#                   properties:
-#                     databaseName:
-#                       type: string
-#                     maxSizeGB:
-#                       type: integer
-#                       default: 5
+apiVersion: apiextensions.crossplane.io/v1
+kind: CompositeResourceDefinition
+metadata:
+  #'<plural>.<group>'
+  name: xsqls.database.example.org
+spec:
+  group: database.example.org
+  names:
+    kind: Xsql
+    plural: xsqls
+  claimNames:
+    kind: Azuresql
+    plural: azuresqls
+  versions:
+    - name: v1alpha1
+      served: true
+      referenceable: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                parameters:
+                  type: object
+                  properties:
+                    databaseName:
+                      type: string
+                    maxSizeGB:
+                      type: integer
+                      default: 5
