--- a/infrastructure/composition.yaml
+++ b/infrastructure/composition.yaml
@@ -25,7 +25,7 @@ spec:
         apiVersion: v1
         kind: Secret
         metadata:
-          name: sqlserver-creds
+          name: sql-password
           namespace: crossplane-system
         spec:
           type: Opaque
