--- a/infrastructure/composition.yaml
+++ b/infrastructure/composition.yaml
@@ -20,18 +20,6 @@ spec:
             location: East US
           providerConfigRef:
             name: default
-    - name: admin-password
-      base:
-        apiVersion: v1
-        kind: Secret
-        metadata:
-          annotations: 
-            crossplane.io/external-name: sql-password
-          namespace: crossplane-system
-        spec:
-          type: Opaque
-          stringData:
-            password: RamenN00dles
     - name: sqlserver
       base:
         apiVersion: sql.azure.upbound.io/v1beta1
@@ -47,12 +35,17 @@ spec:
             administratorLoginPasswordSecretRef:
               name: sql-password
               key: password
-              namespace: crossplane-system
             location: East US
             resourceGroupName: "my-resource-group"
             version: "12.0"
           providerConfigRef:
             name: default
+        connectionDetails:
+          - name: "sql-password"
+            key: "password"
+            generate:
+              length: 16
+              charset: "alphanumeric"
     - name: sqldatabase
       base:
         apiVersion: sql.azure.upbound.io/v1beta1
