--- a/infrastructure/composition.yaml
+++ b/infrastructure/composition.yaml
@@ -1,75 +1,72 @@
-apiVersion: apiextensions.crossplane.io/v1
-kind: Composition
-metadata:
-  name: azuresql-db-composition
-spec:
-  compositeTypeRef:
-    apiVersion: database.example.org/v1alpha1
-    kind: Xsql
-  resources:
-    - name: resource-group
-      base:
-        apiVersion: azure.upbound.io/v1beta1
-        kind: ResourceGroup
-        metadata:
-          annotations: 
-            crossplane.io/external-name: my-resource-group
-        spec:
-          forProvider:
-            location: East US
-          providerConfigRef:
-            name: default
-    - name: admin-password
-      base:
-        apiVersion: iam.aws.upbound.io/v1beta1
-        kind: AccessKey
-        metadata:
-          annotations: 
-            crossplane.io/external-name: my-resource-group
-        spec:
-          forProvider:
-          writeConnectionSecretToRef:
-            namespace: crossplane-system
-            name: sql-password
-        connectionDetails:
-          - name: password
-            type: FromConnectionSecretKey
-    - name: sqlserver
-      base:
-        apiVersion: sql.azure.upbound.io/v1beta1
-        kind: MSSQLServer
-        metadata:
-          annotations: 
-            crossplane.io/external-name: arsen-sqlserver-2025
-          labels:
-            testing.upbound.io/example-name: arsen-test-srv
-        spec:
-          forProvider:
-            administratorLogin: myadmin
-            administratorLoginPasswordSecretRef:
-              name: sql-password
-              key: password
-              namespace: crossplane-system
-            location: East US
-            resourceGroupName: "my-resource-group"
-            version: "12.0"
-          providerConfigRef:
-            name: default
-    - name: sqldatabase
-      base:
-        apiVersion: sql.azure.upbound.io/v1beta1
-        kind: MSSQLDatabase
-        spec:
-          forProvider:
-            sku:
-              name: S0
-            serverIdSelector:
-              matchLabels:
-                testing.upbound.io/example-name: arsen-test-srv
-          providerConfigRef:
-            name: default
-      patches:
-        - fromFieldPath: "spec.parameters.databaseName"
-          toFieldPath: "metadata.name"
-        - fromFieldPath: "spec.parameters.maxSizeGB"
-          toFieldPath: "spec.forProvider.maxSizeGB"
+# apiVersion: apiextensions.crossplane.io/v1
+# kind: Composition
+# metadata:
+#   name: azuresql-db-composition
+# spec:
+#   compositeTypeRef:
+#     apiVersion: database.example.org/v1alpha1
+#     kind: Xsql
+#   resources:
+#     - name: resource-group
+#       base:
+#         apiVersion: azure.upbound.io/v1beta1
+#         kind: ResourceGroup
+#         metadata:
+#           annotations: 
+#             crossplane.io/external-name: my-resource-group
+#         spec:
+#           forProvider:
+#             location: East US
+#           providerConfigRef:
+#             name: default
+#     - name: admin-password
+#       base:
+#         apiVersion: iam.aws.upbound.io/v1beta1
+#         kind: AccessKey
+#         spec:
+#           forProvider:
+#           writeConnectionSecretToRef:
+#             namespace: crossplane-system
+#             name: sql-password
+#         connectionDetails:
+#           - name: password
+#             type: FromConnectionSecretKey
+#     - name: sqlserver
+#       base:
+#         apiVersion: sql.azure.upbound.io/v1beta1
+#         kind: MSSQLServer
+#         metadata:
+#           annotations: 
+#             crossplane.io/external-name: arsen-sqlserver-2025
+#           labels:
+#             testing.upbound.io/example-name: arsen-test-srv
+#         spec:
+#           forProvider:
+#             administratorLogin: myadmin
+#             administratorLoginPasswordSecretRef:
+#               name: sql-password
+#               key: password
+#               namespace: crossplane-system
+#             location: East US
+#             resourceGroupName: "my-resource-group"
+#             version: "12.0"
+#           providerConfigRef:
+#             name: default
+#     - name: sqldatabase
+#       base:
+#         apiVersion: sql.azure.upbound.io/v1beta1
+#         kind: MSSQLDatabase
+#         spec:
+#           forProvider:
+#             sku:
+#               name: S0
+#             serverIdSelector:
+#               matchLabels:
+#                 testing.upbound.io/example-name: arsen-test-srv
+#           providerConfigRef:
+#             name: default
+#       patches:
+#         - fromFieldPath: "spec.parameters.databaseName"
+#           toFieldPath: "metadata.name"
+#         - fromFieldPath: "spec.parameters.maxSizeGB"
+#           toFieldPath: "spec.forProvider.maxSizeGB"
