--- a/infrastructure/composition.yaml
+++ b/infrastructure/composition.yaml
@@ -36,7 +36,7 @@ spec:
               key: password
               namespace: crossplane-system
             location: East US
-            resourceGroupName: my-resource-group
+            resourceGroupName: "my-resource-group"
             version: "12.0"
           providerConfigRef:
             name: default
